<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/elephant_iv"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/cute_animal"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_elephant"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/first_name_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/first_name"
        app:layout_constraintEnd_toStartOf="@id/last_name_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/elephant_iv" />

    <EditText
        android:id="@+id/last_name_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/first_name_et"
        app:layout_constraintTop_toTopOf="@id/first_name_et" />

    <EditText
        android:id="@+id/age_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/age"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/first_name_et" />

    <TextView
        android:id="@+id/i_am_a_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/i_am_a"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/age_et" />

    <RadioGroup
        android:id="@+id/role_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checkedButton="@id/interested_parent_rb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/i_am_a_tv">

        <RadioButton
            android:id="@+id/interested_parent_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interested_parent" />

        <RadioButton
            android:id="@+id/volunteer_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volunteer" />

    </RadioGroup>

    <Button
        android:id="@+id/enter_btn"
        style="@style/Widget.PawHaven.Button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:text="@string/enter"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/role_rg" />

</androidx.constraintlayout.widget.ConstraintLayout>