<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="?attr/buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:padding="32dp"
    android:scrollIndicators="top|bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/paw_icon"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_paw" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/pawhaven"
                android:textColor="@color/pawhaven_green"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:contentDescription="@string/cute_animal"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_dog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/get_started_btn"
            style="@style/Widget.PawHaven.Button"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="32dp"
            android:text="@string/get_started"
            android:textSize="28sp" />

    </LinearLayout>

</ScrollView>
